--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,8 @@ jobs:
         run: |
           mkdir -p public
           echo '<html><body>' > public/index.html
-          echo '<h1>Deploy Status</h1>' >> public/index.html
+          echo '<h1>SU PAGINA FUNCIONO CORRECTAMENTE IDIOTO</h1>' >> public/index.html
+            echo '<p>Pasó todos sus mkas test'</p>' >> public/index.html
           echo '<p>Last deploy: '$(date)'</p>' >> public/index.html
           echo '<p>Commit: '$GITHUB_SHA'</p>' >> public/index.html
           echo '</body></html>' >> public/index.html
